--- a/llull.html
+++ b/llull.html
@@ -18,7 +18,7 @@ Syllables:<input size=2 maxlength=2 id='word_length' value=4 />
 <br><br>
 This is a little program with no practical utility<a href="http://unsongbook.com/">.</a>
 <br>
-<a href="https://github.com/pirindiel/llull">github source</a>
+<a href="https://github.com/pirindiel/llull">github source</a> (pull requests welcome)
 </center>
 
 <script>
