--- a/llull.html
+++ b/llull.html
@@ -1,15 +1,11 @@
 <html>
   <head>
-    <title>names-of-god</title>
-    <style>
-      body{
-          background-image: url(https://www.esamskriti.com/essays/docfile/761.jpg)
-        </style>
+    <title>Llull</title>
   </head>
   <body>
 
 <center>
-  <h1>THE THOUSAND THOUSAND INFINITELY RESPLENDENT NAMES OF GOD</h1>
+  <h3>llull</h3>
   <br>
 
 Word: <span id="word">-</span>
