--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
   <head>
-    <title>Llull</title>
+    <title>names-of-god</title>
+    <style>
+      body{
+          background-image: url(https://www.esamskriti.com/essays/docfile/761.jpg)
+        </style>
   </head>
   <body>
 
 <center>
-  <h3>llull</h3>
+  <h1>THE THOUSAND THOUSAND INFINITELY RESPLENDENT NAMES OF GOD</h1>
   <br>
 
 Word: <span id="word">-</span>
