--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           background-image: url(https://www.esamskriti.com/essays/docfile/761.jpg)
         </style>
   </head>
-  <body onload ="start()">
+  <body>
 
 <center>
   <h1>THE THOUSAND THOUSAND INFINITELY RESPLENDENT NAMES OF GOD</h1>
@@ -16,6 +16,8 @@ Word: <span id="word">-</span>
 <br>
 <br>
 
+<button onclick="start()">Start</button>
+<button onclick="stop()">Stop</button>
 Syllables:<input size=2 maxlength=2 id='word_length' value=4 />
 <br><br>
 This is a little program with no practical utility<a href="http://unsongbook.com/">.</a>
