--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@ Word: <span id="word">-</span>
 
 <button onclick="start()">Start</button>
 
-Syllables:<input size=2 maxlength=2 id='word_length' value=4 />
 <br><br>
 This is a little program with no practical utility<a href="http://unsongbook.com/">.</a>
 <br>
@@ -39,6 +38,8 @@ var known_words = ['HANAPHOR-KOTA-SALUSI-NAI-AVORA-STE-KORUSA',
                'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISA-ROK-SUPH-VOD-APANOR-HOV-KEREG-RAI-UK',
                'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISSA-ROC-SUPH-VOD-APANOR-HOV-KEREG-RAI-SI',
                'COR-ASTA-NAMI-NAMI-TELTHE-SO-KATA-RU'];
+
+let word_length = 7
 
 
 var syllable_dict = {};
