--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>names-of-god</title>
     <style>
       body{
-          background-image: url(https://www.esamskriti.com/essays/docfile/761.jpg)
+          background-image: url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg97J1IEJXTe7MWu5lrnDg4ZBJ1FT_XVW8UsToY805lF6BMofZViQhhzD8OxctFE84XPNK-ni8FzD61B5yHXYUoef09R3C6vJfQiVXBzgFJWopOZ37f-8QMbwhjV2cWy1mNRKbG/s1600/virat-Rupa.jpg)
         </style>
   </head>
   <body>
@@ -18,6 +18,7 @@ Word: <span id="word">-</span>
 
 <button onclick="start()">Start</button>
 
+Syllables:<input size=2 maxlength=2 id='word_length' value=4 />
 <br><br>
 This is a little program with no practical utility<a href="http://unsongbook.com/">.</a>
 <br>
@@ -38,8 +39,6 @@ var known_words = ['HANAPHOR-KOTA-SALUSI-NAI-AVORA-STE-KORUSA',
                'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISA-ROK-SUPH-VOD-APANOR-HOV-KEREG-RAI-UK',
                'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISSA-ROC-SUPH-VOD-APANOR-HOV-KEREG-RAI-SI',
                'COR-ASTA-NAMI-NAMI-TELTHE-SO-KATA-RU'];
-
-let word_length = 7
 
 
 var syllable_dict = {};
