--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       body{
           background-image: url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg97J1IEJXTe7MWu5lrnDg4ZBJ1FT_XVW8UsToY805lF6BMofZViQhhzD8OxctFE84XPNK-ni8FzD61B5yHXYUoef09R3C6vJfQiVXBzgFJWopOZ37f-8QMbwhjV2cWy1mNRKbG/s1600/virat-Rupa.jpg)
         </style>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
 
@@ -22,7 +23,7 @@ Syllables:<input size=2 maxlength=2 id='word_length' value=4 />
 <br><br>
 This is a little program with no practical utility<a href="http://unsongbook.com/">.</a>
 <br>
-<a href="https://github.com/pirindiel/llull">github source</a> (pull requests welcome)
+<a href="https://github.com/KVS56/NAME">github source</a>
 </center>
 
 <script>
