--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           background-image: url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg97J1IEJXTe7MWu5lrnDg4ZBJ1FT_XVW8UsToY805lF6BMofZViQhhzD8OxctFE84XPNK-ni8FzD61B5yHXYUoef09R3C6vJfQiVXBzgFJWopOZ37f-8QMbwhjV2cWy1mNRKbG/s1600/virat-Rupa.jpg)
       }
     </style>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png"/>
   </head>
   <body>
 
