--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ var human = "vavara"
 function getRandomInteger(min, max) {
   return Math.floor(Math.random() * (max - min)) + min;
     }
-  if (human !="vaara") {
+  while (human !="vaara") {
    var word_length  = getRandomInteger(1, 50); 
 }
   
