--- a/index.html
+++ b/index.html
@@ -42,13 +42,11 @@ var known_words = ['HANAPHOR-KOTA-SALUSI-NAI-AVORA-STE-KORUSA',
                'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISSA-ROC-SUPH-VOD-APANOR-HOV-KEREG-RAI-SI',
                'COR-ASTA-NAMI-NAMI-TELTHE-SO-KATA-RU'];
 var human = "vavara"
-  
-function getRandomInteger(min, max) {
+
+setInterval(function getRandomInteger(min, max) {
   return Math.floor(Math.random() * (max - min)) + min;
-    }
-  while (human !="vaara") {
    var word_length  = getRandomInteger(1, 50); 
-}
+}, 1000);
   
 setInterval(getRandomInteger, 100) 
 
