--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function update_word_div(word) {
 function play_word(word) {
   for (var i in word) {
     var syllable = word[i];
-    var url = 'cantor/' + syllable + '.ogg';
+    var url = 'https://upload.wikimedia.org/wikipedia/commons/0/07/Silence.ogg';
     audio_queue.push(url);
   }
 }
