--- a/index.html
+++ b/index.html
@@ -28,19 +28,16 @@ This is a little program.
 </center>
 
 <script>
-var known_words = ['HANAPHOR-KOTA-SALUSI-NAI-AVORA-STE-KORUSA',
-               'KUHU-SHEN-TAR-TAVAL-ANASASI-VA',
-               'ROS-AILE-KAPHILUTON-MIRAKOI-KALANIEMI-TSHANA-KAI-KAI-EPHSANDER-GALISDO-TAHUN-MEH-MEH-MEH-MEH-MEH-MEH',
-               'AR-ASH-KON-CHEL-NA-VAN-TSIR',
-               'AR-ASH-KON-CHEL-NA-VAN-TSIT',
-               'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISA-ROK-SUPH-VOD-APANOR-HOV-KEREG-RAI-UM',
-               'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISA-ROK-SUPH-VOD-APANOR-HOV-KEREG-RAI-US',
-               'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISA-ROK-SUPH-VOD-APANOR-HOV-KEREG-RAI-UA',
-               'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISA-ROK-SUPH-VOD-APANOR-HOV-KEREG-RAI-UP',
-               'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISA-ROK-SUPH-VOD-APANOR-HOV-KEREG-RAI-UTS',
-               'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISA-ROK-SUPH-VOD-APANOR-HOV-KEREG-RAI-UK',
-               'VIS-LAIGA-RON-TEPHENOR-AST-AST-TELISSA-ROC-SUPH-VOD-APANOR-HOV-KEREG-RAI-SI',
-               'COR-ASTA-NAMI-NAMI-TELTHE-SO-KATA-RU'];
+var known_words = ['HARI-KRISHNA-SESHASHAYI-NARAYANA-ANANTAVAIBHAVA',
+               'ŚUCIRŪRJITAḤ-ANANTAVAIBHAVA-PRANAVA-RAVANAARI',
+               'UPENDRŌ-VĀMANAḤ-PRĀṀŚURAMŌGHAḤ-ŚUCIRŪRJITAḤ-ATĪNDRAḤ-SAṄGRAHAḤ-RAMA-SARGŌ-DHṚTĀTMĀ-NIYAMŌ-YAMA',
+               'UPENDRŌ-VĀMANAḤ-PRĀṀŚURAMŌGHAḤ-SURĀDHYAKṢŌ-ŚUCIRŪRJITAḤ-ATĪNDRAḤ-SAṄGRAHAḤ-RAMA-SARGŌ-DHṚTĀTMĀ-NIYAMŌ-RAMA',
+               'UPENDRŌ-SAṄGRAHAḤ-RAMA-SARGŌ-VISHVĀTMĀ-NIYAMŌ-RAGHAVA',
+               'LŌKĀDHYAKṢAḤ-SURĀDHYAKṢŌ-DHARMĀDHYAKṢAḤ-KṚTĀKṚTA',
+               'RAMA-RBHOJANAM-HARI-HARI-PRANAVA',
+               'OJAHS–TEJO-DYUTI–DHARAH-PRAKASH–ATMAA-PRATAPPANAH-BHUDDHAH–SPASHT–AKHSHARO–MANTRAH-CHANDRAAMSHUH-RBHASKARA–DYUTIH',
+               'SHANKHA–BHRUT–NANDEE–CHAKREE–SHARNGAPANI–GADA–DHARAH-RATHANGA–PANI–RAKSHOBHYAH-SARVAPRAHARANAA–YUDHAH',
+               ];
 var human = "vavara"
 
 var word_length  = 50
