--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ Word: <span id="word">-</span>
 <br>
 <br>
 
+<button onclick="start()">Start</button>
+  
 <br><br>
 This is a little program.
 <br>
@@ -25,7 +27,9 @@ This is a little program.
 </center>
 
 <script>
-var known_words = ['HARI-KRISHNA-SESHASHAYI-NARAYANA-ANANTAVAIBHAVA',
+var known_words = ['VIŚVAṀ-VIṢṆURVAṢAṬKĀRŌ-BHŪTABHAVYABHAVATPRABHUḤ-BHŪTAKṚDBHŪTABHṚDBHĀVŌ-BHŪTĀTMĀ-BHŪTABHĀVANAḤ',
+                'PŪTĀTMĀ-PARAMĀTMĀ-MUKTĀNĀṀ-PARAMĀ-GATIḤ-AVYAYAḤ-PURUṢAḤ-SĀKṢĪ-KṢETRAJÑŌKṢARA',
+               'HARI-KRISHNA-SESHASHAYI-NARAYANA-ANANTAVAIBHAVA',
                'ŚUCIRŪRJITAḤ-ANANTAVAIBHAVA-PRANAVA-RAVANAARI',
                'UPENDRŌ-VĀMANAḤ-PRĀṀŚURAMŌGHAḤ-ŚUCIRŪRJITAḤ-ATĪNDRAḤ-SAṄGRAHAḤ-RAMA-SARGŌ-DHṚTĀTMĀ-NIYAMŌ-YAMA',
                'UPENDRŌ-VĀMANAḤ-PRĀṀŚURAMŌGHAḤ-SURĀDHYAKṢŌ-ŚUCIRŪRJITAḤ-ATĪNDRAḤ-SAṄGRAHAḤ-RAMA-SARGŌ-DHṚTĀTMĀ-NIYAMŌ-RAMA',
