--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Names-Of-God</title>
     <style>
       body{
-          background-image: url(https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg97J1IEJXTe7MWu5lrnDg4ZBJ1FT_XVW8UsToY805lF6BMofZViQhhzD8OxctFE84XPNK-ni8FzD61B5yHXYUoef09R3C6vJfQiVXBzgFJWopOZ37f-8QMbwhjV2cWy1mNRKbG/s1600/virat-Rupa.jpg)
+          background-image: url(https://preview.redd.it/who-painted-this-vishwaroop-of-lord-krishna-vishu-v0-bhwslpjm2pic1.jpeg?width=1080&crop=smart&auto=webp&s=bea2d95afe84a839d9cef3bdd6173e02ac147e89)
       }
     </style>
     <link rel="icon" type="image/png" href="/favicon.png"/>
