--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Names-Of-God</title>
     <style>
       body{
-          background-image: url(https://preview.redd.it/who-painted-this-vishwaroop-of-lord-krishna-vishu-v0-bhwslpjm2pic1.jpeg?width=1080&crop=smart&auto=webp&s=bea2d95afe84a839d9cef3bdd6173e02ac147e89)
+          background-image: url(https://cdn6.aptoide.com/imgs/2/2/6/2264a8180c476b4e8bbb84f4e53a9f7f_icon.jpg)
       }
     </style>
     <link rel="icon" type="image/png" href="/favicon.png"/>
@@ -13,7 +13,7 @@
   <h1>THE THOUSAND THOUSAND INFINITELY RESPLENDENT NAMES OF GOD</h1>
   <br>
 
-Word: <span id="word">-</span>
+Word: <span id="word"></span>
 <br>
 <br>
 
@@ -22,7 +22,7 @@ Word: <span id="word">-</span>
 <br><br>
 This is a little program.
 <br>
-<a href="https://github.com/KVS56/NAME">github source</a>
+<a href="https://github.com/KVS56/NAME">source</a>
 </center>
 
 <script>
