--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
     <link rel="icon" type="image/png" href="/favicon.png"/>
   </head>
-  <body>
+  <body onload="start()">
 <center>
   <h1>THE THOUSAND THOUSAND INFINITELY RESPLENDENT NAMES OF GOD</h1>
   <br>
