--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     </style>
     <link rel="icon" type="image/png" href="/favicon.png"/>
   </head>
-  <body onload="start()">
+  <body>
 <center>
   <h1>THE THOUSAND THOUSAND INFINITELY RESPLENDENT NAMES OF GOD</h1>
   <br>
-
+  
 Word: <span id="word"></span>
 <br>
 <br>
@@ -140,6 +140,6 @@ function stop() {
 }
 
 </script>
-
+<p onload="start()"></p>
   </body>
 </html>
